# Trivial-File-Transfer-Protocol

./: CMakeLists.txt  Packet_Builder.cpp  Packet_Builder.h  Packet_Helper.cpp  Packet_Helper.h  TFTP_Connection_State.cpp  TFTP_Connection_State.h  flake.nix  main.cpp  sentUDP
send/: send.cpp  send.h
utils/: TFTP_Utils.cpp  TFTP_Utils.h  UDP_Utils.cpp  UDP_Utils.h  tftp_utils.h  udp_utils.cpp  udp_utils.h
